--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "@enso-ui/ui": "^2.0.3",
-    "@enso-ui/forms": "^1.2.2",
-    "@enso-ui/tables": "^1.1.2",
-    "@enso-ui/filters": "^1.1.2",
+    "@enso-ui/directives": "1.0.x",
+    "@enso-ui/filters": "1.1.x",
+    "@enso-ui/forms": "1.2.x",
+    "@enso-ui/tables": "1.1.x",
+    "@enso-ui/ui": "2.0.x",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-brands-svg-icons": "^5.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "lodash": "^4.17.15",
     "vue": "^2.5.16"
   }
 }
