--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "@enso-ui/accessories": "2.1.x",
     "@enso-ui/directives": "1.0.x",
-    "@enso-ui/filters": "1.1.x",
+    "@enso-ui/filters": "1.2.x",
     "@enso-ui/forms": "1.2.x",
-    "@enso-ui/tables": "1.1.x",
-    "@enso-ui/ui": "2.0.x",
+    "@enso-ui/tables": "1.2.x",
+    "@enso-ui/ui": "2.1.x",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-brands-svg-icons": "^5.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
